k8s/Example/fortune-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: fortune
spec:
  containers:
    - name: fortune
      image: luksa/fortune
      volumeMounts:
        - mountPath: /var/htdocs
          name: html
    - image: nginx:alpine
      name: web-server
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html
          readOnly: true
      ports:
        - containerPort: 80
          protocol: TCP
  volumes:
    - name: html
      emptyDir: {}
