k8s/Example/mongodb-pod-nfs.yml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
spec:
  volumes:
    - name: mongodb-data
      hostPath:
        path: /data/mongo
  containers:
    - name: mongodb
      image: mongo
      volumeMounts:
        - mountPath: /data/db
          name: mongodb-data
      ports:
        - containerPort: 27017
          protocol: TCP
