k8s/Example/external-service-endpoints.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service
subsets:
  - addresses:
      - ip: 192.168.1.131
    ports:
      - port: 9092
