k8s/Example/external-service-externalname.yml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  ports:
    - port: 9002
      targetPort: 9092
