k8s/Example/kubia-rc-and-service-v1.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  type: LoadBalancer
  selector:
    app: kubia
  ports:
    - port: 80
      targetPort: 8080
  externalIPs:
    - 192.168.1.103
