k8s/Example/kubia-service-headless.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  selector:
    app: kubia
  ports:
    - port: 80
      targetPort: 8080
  externalIPs:
    - 192.168.1.131
