k8s/Example/kubia-svc-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia-loadbalancer
spec:
  selector:
    app: kubia
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
