k8s/Example/kubia-svc-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  selector:
    app: kubia
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30123
  type: NodePort
