k8s/Example/kubia-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  selector:
    app: kubia
  ports:
    - port: 8001
      targetPort: 8080
  type: NodePort
